--- a/style.scss
+++ b/style.scss
@@ -1,21 +1,51 @@
+$color1: rgb(218, 218, 218);
+$color2: rgb(240, 240, 240);
 * {
     font-family: 'Poppins', sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: $color2;
+}
+
+.title {
+    margin: 20px auto;
+    text-align: center;
 }
 
 .messages {
     &_title {
+        margin: 5px auto;
         text-align: center;
     }
     &_wrapper {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        align-items: space-evenly;
     }
     &_message {
-        width: 40%;
-        height: 100px;
-        border: 1px solid black;
+        width: 45%;
+        margin: 10px;
+        padding: 5px;
+        font-size: 0.8rem;
+        text-align: center;
+        border: none;
+        border-radius: 10px;
+        background-color: $color1;
     }
+}
+
+.message {
+    display: block;
+    width: 70%;
+    min-width: 300px;
+    height: 200px;
+    margin: 20px auto;
+    border: none;
+    border-radius: 10px;
+    background-color: $color1;
 }
