--- a/style.css
+++ b/style.css
@@ -7,40 +7,70 @@
 
 body {
   background-color: rgb(240, 240, 240);
+  font-size: 14px;
 }
 
 .title {
   margin: 20px auto;
   text-align: center;
 }
+@media (min-width: 768px) {
+  .title {
+    font-size: 2.2rem;
+  }
+}
+@media (min-width: 1280px) {
+  .title {
+    font-size: 2.4rem;
+  }
+}
 
 .messages_title {
   margin: 5px auto;
   text-align: center;
+}
+@media (min-width: 768px) {
+  .messages_title {
+    font-size: 1.6rem;
+  }
+}
+@media (min-width: 1280px) {
+  .messages_title {
+    font-size: 1.8rem;
+  }
 }
 .messages_wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: space-evenly;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .messages_message {
   width: 45%;
   margin: 10px;
   padding: 5px;
-  font-size: 0.8rem;
   text-align: center;
   border: none;
   border-radius: 10px;
   background-color: rgb(218, 218, 218);
+}
+@media (min-width: 768px) {
+  .messages_message {
+    width: 20%;
+  }
 }
 
 .message {
   display: block;
   width: 70%;
   min-width: 300px;
+  max-width: 1000px;
   height: 200px;
   margin: 20px auto;
+  padding: 20px;
   border: none;
   border-radius: 10px;
   background-color: rgb(218, 218, 218);
