--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 $color1: rgb(218, 218, 218);
 $color2: rgb(240, 240, 240);
+$fontSize: 14px;
 * {
     font-family: 'Poppins', sans-serif;
     padding: 0;
@@ -9,33 +10,57 @@ $color2: rgb(240, 240, 240);
 
 body {
     background-color: $color2;
+    font-size: $fontSize;
 }
 
 .title {
     margin: 20px auto;
     text-align: center;
+    @media (min-width: 768px) {
+        font-size: 2.2rem;
+    }
+    @media (min-width: 1280px) {
+        font-size: 2.4rem;
+    }
 }
 
 .messages {
     &_title {
         margin: 5px auto;
         text-align: center;
+        @media (min-width: 768px) {
+            font-size: 1.6rem;
+        }
+        // @media (min-width: 1024px) {
+        //     font-size: 2.2rem;
+        // }
+        @media (min-width: 1280px) {
+            font-size: 1.8rem;
+        }
+        // @media (min-width: 1414px) {
+        //     font-size: 2.4rem;
+        // }
     }
     &_wrapper {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: space-evenly;
+        width: 90%;
+        max-width: 1200px;
+        margin: 0 auto;
     }
     &_message {
         width: 45%;
         margin: 10px;
         padding: 5px;
-        font-size: 0.8rem;
         text-align: center;
         border: none;
         border-radius: 10px;
         background-color: $color1;
+        @media (min-width: 768px) {
+            width: 20%;
+        }
     }
 }
 
@@ -43,8 +68,10 @@ body {
     display: block;
     width: 70%;
     min-width: 300px;
+    max-width: 1000px;
     height: 200px;
     margin: 20px auto;
+    padding: 20px;
     border: none;
     border-radius: 10px;
     background-color: $color1;
