--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ body {
   margin: 0 auto;
 }
 .messages_message {
+  display: flex;
+  flex-direction: column;
   width: 45%;
   margin: 10px;
   padding: 5px;
@@ -59,8 +61,27 @@ body {
 }
 @media (min-width: 768px) {
   .messages_message {
+    font-size: 1rem;
     width: 20%;
   }
+}
+@media (min-width: 1280px) {
+  .messages_message {
+    font-size: 1.2rem;
+  }
+}
+.messages_addButton {
+  width: 50px;
+  margin: 5px auto;
+  padding: 2px;
+  border: none;
+  border-radius: 10px 0;
+  transition: 0.3s ease-in-out;
+}
+.messages_addButton:hover {
+  background-color: rgb(200, 200, 200);
+  border-radius: 0 10px;
+  cursor: pointer;
 }
 
 .message {
