--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,30 @@
 $color1: rgb(218, 218, 218);
 $color2: rgb(240, 240, 240);
 $color3: rgb(200, 200, 200);
+$color4: rgb(220, 223, 200);
+$color5: rgb(222, 240, 150);
 $fontSize: 14px;
 * {
-    font-family: 'Poppins', sans-serif;
     padding: 0;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
 body {
     background-color: $color2;
     font-size: $fontSize;
+}
+
+button {
+    display: block;
+    border: none;
+    border-radius: 10px 0;
+    transition: 0.3s ease-in-out;
+    &:hover {
+        border-radius: 0 10px;
+        cursor: pointer;
+    }
 }
 
 .title {
@@ -66,14 +79,15 @@ body {
     &_addButton {
         width: 50px;
         margin: 5px auto;
-        padding: 2px;
-        border: none;
-        border-radius: 10px 0;
-        transition: 0.3s ease-in-out;
+        padding: 5px;
+        @media (min-width: 768px) {
+            font-size: 0.7rem;
+        }
+        @media (min-width: 1280px) {
+            font-size: 0.8rem;
+        }
         &:hover {
             background-color: $color3;
-            border-radius: 0 10px;
-            cursor: pointer;
         }
     }
 }
@@ -89,4 +103,24 @@ body {
     border: none;
     border-radius: 10px;
     background-color: $color1;
+}
+
+.buttons {
+    width: 300px;
+    margin: 15px auto;
+    display: flex;
+    justify-content: space-evenly;
+    &_button {
+        background-color: $color4;
+        padding: 10px;
+        @media (min-width: 768px) {
+            font-size: 0.9rem;
+        }
+        @media (min-width: 1280px) {
+            font-size: 1.1rem;
+        }
+        &:hover {
+            background-color: $color5;
+        }
+    }
 }
